--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,11 @@ services:
   - type: web
     name: melee-tournament-app
     env: python
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: |
+      apt-get update && apt-get install -y wget gnupg unzip curl
+      wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+      apt install -y ./google-chrome-stable_current_amd64.deb || true
+      pip install -r requirements.txt
     startCommand: "streamlit run app.py --server.port $PORT --server.enableCORS false"
     envVars:
       - key: SUPABASE_URL
